docs: add comprehensive documentation for workflow API and development
- Created API usage guide with workflow management examples
- Added detailed development documentation with project structure
- Included frontend visualization editor user guide
- Provided quick start guide with environment setup instructions
- Documented node types, execution examples, and error handling
- Added monitoring endpoints and health check information
- Included troubleshooting guides for common issues
- Added performance optimization tips and best practices